# Robotik_Projekt_3

./: EuclideanDistTracker.py  Main.py  ObjectDetector.py  README.md  SEAG3.py  TopDownTransformer.py  kamera  landmark.py  position_Koordinaten.py  regelung_interface  regelung_state_machine  regler_node.py  regler_test  regler_test.py
emergency_package/: package.xml  setup.cfg  setup.py
emergency_package/emergency_package/: emergency_node.py
object_interfaces/: CMakeLists.txt  package.xml
object_interfaces/msg/: ObjectData.msg
object_tracker_package/: package.xml  setup.cfg  setup.py
object_tracker_package/object_tracker_package/: CenterOfMassCalculator  CenterOfMassCalculator.py  CoordinateSystem.py  EuclideanDistTracker.py  GlobalCoordinateSystem.py  HelperFunctions.py  ObjectDetector.py  TopDownTransformer.py  object_tracker_node.py  unitTest.py
regler_package/: package.xml  setup.cfg  setup.py
regler_package/regler_package/: regler_node.py  regler_test
regler_package/test/: test_controller.py  test_object_data_callback.py  test_regler_node.py
rviz/: package.xml  setup.py
rviz/rviz/: rviz_publisher.py
target_pose_interfaces/: CMakeLists.txt  package.xml
target_pose_interfaces/msg/: TargetPose.msg
watchdog/: package.xml  setup.py
watchdog/watchdog/: watchdog.py
